--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@nfteyez/sol-rayz": "^0.10.2",
-    "@project-serum/anchor": "^0.14.0",
+    "@project-serum/anchor": "^0.18.2",
     "@solana/spl-token": "^0.1.8",
     "@solana/wallet-adapter-base": "^0.7.1",
     "@solana/wallet-adapter-react": "^0.13.1",
@@ -25,15 +25,19 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "apexcharts": "^3.35.5",
     "canvas-confetti": "^1.4.0",
     "dotenv": "^16.0.3",
     "prop-types": ">=15.7.2",
+    "rc-progress": "^3.4.0",
     "react": "17.0.2",
+    "react-apexcharts": "^1.4.0",
     "react-countdown": "^2.3.2",
     "react-dom": "17.0.2",
     "react-is": "17.0.2",
     "react-router-dom": "^6.4.1",
     "react-scripts": "4.0.3",
+    "react-toast-notifications": "^2.5.1",
     "sass": "^1.55.0",
     "styled-components": "^5.3.1",
     "typescript": "^4.5.5",
